--- a/testing.html
+++ b/testing.html
@@ -1,111 +1,37 @@
 
 <!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="theme-color" content="#426098">
-    <meta name="title" content="Thereallo.dev">
-    <meta name="description" content="biolink">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Convicted @ Bio</title>
-    <link href="https://fonts.googleapis.com/css?family=Google+Sans:400,500,600,700" rel="stylesheet">
-  </script>
-    :root{
-      --gradient: linear-gradient(94.47deg, #211231 30.46%, #211231 99.9%);
-  }
-  
-  body{
-      background-color: #111;
-      font-family: 'Google Sans', sans-serif;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      min-height: 100vh;
-      background:url(https://media.discordapp.net/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif) no-repeat center center fixed;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      margin: 0;
-      
-  }
-  
-  .margin-content{
-      margin-top: 0vh;
-  }
-  
-  .gradient-txt{
-      background-image: var(--gradient);
-      -webkit-background-clip: text;
-      color: transparent;
-      font-size: 3rem;
-      margin-bottom: -1.2rem;
-  }
-  
-  .pfp{
-      border-radius: 10px;
-  }
-  
-  .under-txt{
-      font-size: 17px;
-  }
-  
-  .grey-link{
-      font-size: 20px;
-      padding: 3px;
-      color: rgb(199, 197, 197);
-  }
-  
-  .box{
-      background-color: rgba(0, 0, 0, 0.700);
-      padding: 80px;
-      border-radius: 10px;
-  }
-  
-  @media (max-width: 400px){
-      .box{
-          padding: 30px;
-      }
-  }
-  
-  .inf{
-      bottom: 0;
-      position: absolute;
-      width: 100%;
-  }    
-    </script>
-
-    <script>
-      src="https://kit.fontawesome.com/cf16def632.js"
-      crossorigin="anonymous"
-      defer
-     </script>
-  </head> 
-  <body>
-    <div class="margin-content">
-      <div class="box">
-        <img
-          class="pfp"
-          src="https://media.discordapp.net/attachments/1004849202507038804/1063608087988146236/BF3242D4-D63F-4DD3-906F-7A18FDF7A5FA.gif"
-        />
-        <h1>
-          <span class="gradient-txt">Convicted</span></h1>
-        <p class="under-txt">Owner & Developer of @ Killa.lol</p>
-        <div class="links">
-          <a
-            href="https://discord.com/users/399862294143696897"
-            class="grey-link"
-            ><i class="fa-brands fa-discord"></i
-          ></a>
-
-          <a href="https://github.com/Cxnvicted" class="grey-link"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-        </div>
+<html>
+   <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Convicted</title>
+      <link rel="icon" type="ico/x-icon" href="favicon.ico">
+      <meta name="theme-color" content="#010409" />
+      <meta name="description" content="Developer & Owner of @Killa.lol">
+      <meta property="og:description" content="Developer & Owner of @Killa.lol" />
+      <meta property="og:image" content="https://erdem.js.org/favicon.png" />
+      <meta property="og:url" content="https://erdem.js.org" />
+      <meta property="og:title" content="erdem" />
+      <meta property="og:site_name" content="erdem.js.org" />
+      <meta property="og:type" content="website" />
+      <link rel="canonical" href="https://Killa.lol/$" />
+      <link rel="stylesheet" href="https://erdem.js.org/style.css" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hackclub/css@79ee8661dfe9ab17af7d35cd8d9d7373029a8919/theme.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+      <link rel="preload" href="fonts/NanumPen.woff2" as="font" type="font/woff2" crossorigin>
+   </head>
+   <body>
+      <div id="container">
+         <!-- <img id="avatar" style="border-radius: 50%;" src=""/> -->
+         <h1 class="title">Convicted</h1>
+         <h3 class="headline" style="color: var(--snow); padding-bottom: 10px;"><i id="statusicon" class="fa-brands fa-spotify"></i>
+            <a id="statustext">Developer & Owner of @Killa.lol</a>
+         </h3>
+         <h4 style="color: var(--snow)">
+            <a href="https://github.com/cxnvicted"><i class="fa-brands fa-github icons"></i></a>
+            <a href="https://discord.com/users/1000022273673138226"><i class="fa-brands fa-discord icons"></i></a>
+            <a href="https://t.me/cxnvicted"><i class="fa-brands fa-telegram icons"></i></a>
+         </h4>
       </div>
-    </div>
+      <script src="https://erdem.js.org/script.js"></script>
+   </body>
 </html>
