--- a/testing.html
+++ b/testing.html
@@ -24,7 +24,7 @@
          <!-- <img id="avatar" style="border-radius: 50%;" src=""/> -->
          <h1 class="title">Convicted</h1>
          <h3 class="headline" style="color: var(--snow); padding-bottom: 10px;"><i id="statusicon" class="fa-brands fa-spotify"></i>
-            <a id="statustext">Developer & Owner of @Killa.lol</a>
+          <p class="about">Owner & Developer of @ Killa.lol</p>
          </h3>
          <h4 style="color: var(--snow)">
             <a href="https://github.com/cxnvicted"><i class="fa-brands fa-github icons"></i></a>
