--- a/testing.html
+++ b/testing.html
@@ -30,6 +30,8 @@
             <a href="https://discord.com/users/1000022273673138226"><i class="fa-brands fa-discord icons"></i></a>
             <a href="https://t.me/cxnvicted"><i class="fa-brands fa-telegram icons"></i></a>
          </h4>
+        </div>
+        <a social="discord" data="Killa.lol" href="https://discord.gg/ssKraVFH" target="_blank"><i class="fa-brands fa-discord"></i><p>Discord Server</p></a>
       </div>
       <script src="https://erdem.js.org/script.js"></script>
    </body>
