--- a/testing.html
+++ b/testing.html
@@ -31,7 +31,7 @@
             <a href="https://t.me/cxnvicted"><i class="fa-brands fa-telegram icons"></i></a>
          </h4>
         </div>
-        <a social="discord" data="Killa.lol" href="https://discord.gg/ssKraVFH" target="_blank"><i class="fa-brands fa-discord"></i><p>Discord Server</p></a>
+      </iframe> <a target="_blank" href="https://discord.gg/ssKraVFH"><button style="border-radius: 30px" class="btn-link" type="button">Discord</button></a>
       </div>
       <script src="https://erdem.js.org/script.js"></script>
    </body>
