--- a/testing.html
+++ b/testing.html
@@ -31,6 +31,9 @@
             <a href="https://t.me/cxnvicted"><i class="fa-brands fa-telegram icons"></i></a>
          </h4>
         </div>
+      </div>
+    </div>
+  </div>
       </iframe> <a target="_blank" href="https://discord.gg/ssKraVFH"><button style="border-radius: 30px" class="btn-link" type="button">Discord</button></a>
       </div>
       <script src="https://erdem.js.org/script.js"></script>
