--- a/testing.html
+++ b/testing.html
@@ -32,9 +32,8 @@
          </h4>
         </div>
       </div>
-    </div>
+    </div><center></iframe> <a target="_blank" href="https://discord.gg/ssKraVFH"><button style="border-radius: 30px" class="btn-link" type="button">Discord</button></a></center>
   </div>
-      </iframe> <a target="_blank" href="https://discord.gg/ssKraVFH"><button style="border-radius: 30px" class="btn-link" type="button">Discord</button></a>
       </div>
       <script src="https://erdem.js.org/script.js"></script>
    </body>
