--- a/testing.html
+++ b/testing.html
@@ -24,7 +24,7 @@
          <!-- <img id="avatar" style="border-radius: 50%;" src=""/> -->
          <h1 class="title">Convicted</h1>
           <p class="about">Owner & Developer of @ Killa.lol</p>
-          <center></iframe> <a target="_blank" href="https://discord.gg/ssKraVFH"><button style="border-radius: 30px" class="btn-link" type="button">Discord</button></a></center>
+          <a href="https://www.discord.gg/killa.lol" target="_blank" rel="noopener noreferrer nofollow" title="https://www.discord.gg/killa.lol" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
          </h3>
          <h4 style="color: var(--snow)">
             <a href="https://github.com/cxnvicted"><i class="fa-brands fa-github icons"></i></a>
