--- a/testing.html
+++ b/testing.html
@@ -24,7 +24,11 @@
          <!-- <img id="avatar" style="border-radius: 50%;" src=""/> -->
          <h1 class="title">Convicted</h1>
           <p class="about">Owner & Developer of @ Killa.lol</p>
-          <a href="https://www.discord.gg/killa.lol" target="_blank" rel="noopener noreferrer nofollow" title="https://www.discord.gg/killa.lol" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
+        </div>          
+          <div class="badge">
+            <img src="https://cdn.discordapp.com/emojis/947739490431148054.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Staff">
+            <span class="badge-tooltiptext">Staff</span>
+          </div>
          </h3>
          <h4 style="color: var(--snow)">
             <a href="https://github.com/cxnvicted"><i class="fa-brands fa-github icons"></i></a>
