--- a/testing.html
+++ b/testing.html
@@ -286,8 +286,16 @@
           <p class="about">Owner & Developer of @ Killa.lol</p>
         </div>          
           <div class="badge">
-            <img src="https://cdn.discordapp.com/emojis/947739490431148054.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Staff">
+            <img src="https://cdn.discordapp.com/emojis/1067960946292707368.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Owner">
+            <span class="badge-tooltiptext">Owner</span>
+          </div>
+          <div class="badge">
+            <img src="https://cdn.discordapp.com/emojis/1067960948452765777.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Staff">
             <span class="badge-tooltiptext">Staff</span>
+          </div>
+          <div class="badge">
+            <img src="https://cdn.discordapp.com/emojis/1067960946892472342.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="memberid">
+            <span class="badge-tooltiptext">ID: 2</span>
           </div>
         </div>   
          </h3>
