--- a/testing.html
+++ b/testing.html
@@ -300,9 +300,9 @@
         </div>   
          </h3>
          <h4 style="color: var(--snow)">
-            <a href="https://github.com/cxnvicted"><i class="fa-brands fa-github icons"></i></a>
-            <a href="https://discord.com/users/1000022273673138226"><i class="fa-brands fa-discord icons"></i></a>
-            <a href="https://t.me/cxnvicted"><i class="fa-brands fa-telegram icons"></i></a>
+            <center><a href="https://github.com/cxnvicted"><i class="fa-brands fa-github icons"></i></a></center>
+          </center><a href="https://discord.com/users/1000022273673138226"><i class="fa-brands fa-discord icons"></i></a></center>
+          </center><a href="https://t.me/cxnvicted"><i class="fa-brands fa-telegram icons"></i></a></center>
          </h4>
         </div>
       </div>
