--- a/testing.html
+++ b/testing.html
@@ -279,22 +279,22 @@
          <h1 class="title">Convicted</h1>
           <p class="about">Owner & Developer of @ Killa.lol</p>
         </div>          
-          <div class="badge">
-            <img src="https://cdn.discordapp.com/emojis/1067960946292707368.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Owner">
-            <span class="badge-tooltiptext">Owner</span>
-          </div>
-          <div class="badge">
-            <img src="https://cdn.discordapp.com/emojis/1067960948452765777.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Staff">
-            <span class="badge-tooltiptext">Staff</span>
-          </div>
-          <div class="badge">
-            <img src="https://cdn.discordapp.com/emojis/1067960946892472342.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="memberid">
-            <span class="badge-tooltiptext">ID: 2</span>
+      </center> <div class="badge"></center>
+          </center>  <img src="https://cdn.discordapp.com/emojis/1067960946292707368.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Owner"></center>
+          </center>  <span class="badge-tooltiptext">Owner</span></center>
+          </center></div></center>
+        </center><div class="badge"></center>
+          </center>  <img src="https://cdn.discordapp.com/emojis/1067960948452765777.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Staff"></center>
+          </center>  <span class="badge-tooltiptext">Staff</span></center>
+          </center></div></center>
+        </center> <div class="badge"></center>
+        </center><img src="https://cdn.discordapp.com/emojis/1067960946892472342.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="memberid"></center>
+      </center><span class="badge-tooltiptext">ID: 2</span></center>
           </div>
         </div>   
          </h3>
          <h4 style="color: var(--snow)">
-            <center><a href="https://github.com/cxnvicted"><i class="fa-brands fa-github icons"></i></a></center>
+          </center><a href="https://github.com/cxnvicted"><i class="fa-brands fa-github icons"></i></a></center>
           </center><a href="https://discord.com/users/1000022273673138226"><i class="fa-brands fa-discord icons"></i></a></center>
           </center><a href="https://t.me/cxnvicted"><i class="fa-brands fa-telegram icons"></i></a></center>
          </h4>
