--- a/testing.html
+++ b/testing.html
@@ -298,7 +298,15 @@
           </center><a href="https://discord.com/users/1000022273673138226"><i class="fa-brands fa-discord icons"></i></a></center>
           </center><a href="https://t.me/cxnvicted"><i class="fa-brands fa-telegram icons"></i></a></center>
          </h4>
-        </div>
+        </div>                  
+      </div>
+  </div>
+<div class="links">
+      
+<a class="link" href="https://discord.gg/ssKraVFH" target="_blank" style="background-color: #28292e;">
+      
+          <img src="/static/assets/icons/discord.png">
+          <p style="color: #ffffff">Killa Server</p>
       </div>
      <script src="https://erdem.js.org/script.js"></script>
   </html>
