--- a/testing.html
+++ b/testing.html
@@ -309,4 +309,7 @@
           <p style="color: #ffffff">Killa Server</p>
       </div>
      <script src="https://erdem.js.org/script.js"></script>
+     <div class="footer">
+			<a href="https://killa.lol">killa.lol</a>
+		</div>
   </html>
