--- a/testing.html
+++ b/testing.html
@@ -9,9 +9,10 @@
       <meta name="description" content="Developer & Owner of @Killa.lol">
       <meta property="og:description" content="Developer & Owner of @Killa.lol" />
       <meta property="og:image" content="https://erdem.js.org/favicon.png" />
-      <meta property="og:url" content="https://erdem.js.org" />
+      <meta property="og:url" content="https://killa.lol" />
+      <link href="https://dark.bio/static/css/page.css" rel="stylesheet" type="text/css" />
       <meta property="og:title" content="erdem" />
-      <meta property="og:site_name" content="erdem.js.org" />
+      <meta property="og:site_name" content="killa.lol" />
       <meta property="og:type" content="website" />
       <link rel="canonical" href="https://Killa.lol/$" />
       <link rel="stylesheet" href="https://erdem.js.org/style.css" />
@@ -277,8 +278,7 @@
       <div id="container">
          <!-- <img id="avatar" style="border-radius: 50%;" src=""/> -->
          <h1 class="title">Convicted</h1>
-          <p class="about">Owner & Developer of @ Killa.lol</p>
-        </div>          
+          <p class="about">Owner & Developer of @ Killa.lol</p>       
       </center> <div class="badge"></center>
           </center>  <img src="https://cdn.discordapp.com/emojis/1067960946292707368.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Owner"></center>
           </center>  <span class="badge-tooltiptext">Owner</span></center>
@@ -305,7 +305,7 @@
       
 <a class="link" href="https://discord.gg/ssKraVFH" target="_blank" style="background-color: #28292e;">
       
-          <img src="/static/assets/icons/discord.png">
+          <img src="https://dark.bio/static/assets/icons/discord.png">
           <p style="color: #ffffff">Killa Server</p>
       </div>
      <script src="https://erdem.js.org/script.js"></script>
