--- a/testing.html
+++ b/testing.html
@@ -295,7 +295,7 @@
          </h3>
          <h4 style="color: var(--snow)">
           </center><a href="https://github.com/cxnvicted"><i class="fa-brands fa-github icons"></i></a></center>
-          </center><a href="https://discord.com/users/1000022273673138226"><i class="fa-brands fa-discord icons"></i></a></center>
+          </center><a href="https://discord.dog/1000022273673138226"><i class="fa-brands fa-discord icons"></i></a></center>
           </center><a href="https://t.me/cxnvicted"><i class="fa-brands fa-telegram icons"></i></a></center>
          </h4>
         </div>                  
@@ -307,7 +307,6 @@
       
           <img src="https://dark.bio/static/assets/icons/discord.png">
           <p style="color: #ffffff">       Killa Server</p>
-     <div class="footer">
 			<a href="https://killa.lol">killa.lol</a>
     <script src="https://erdem.js.org/script.js"></script>
   </html>
