--- a/testing.html
+++ b/testing.html
@@ -303,10 +303,10 @@
   </div>
 <div class="links">
       
-<a class="link" href="https://discord.gg/ssKraVFH" target="_blank" style="background-color: #28292e;">
+<a class="link" href="https://discord.gg/ssKraVFH" target="_blank" style="background-color: #ffffff;">
       
           <img src="https://dark.bio/static/assets/icons/discord.png">
-          <p style="color: #ffffff">       Killa Server</p>
+          <p style="color: #000000">       Killa Server</p>
 			<a href="https://killa.lol">killa.lol</a>
     <script src="https://erdem.js.org/script.js"></script>
   </html>
