--- a/testing.html
+++ b/testing.html
@@ -306,6 +306,6 @@
 <a class="link" href="https://discord.gg/ssKraVFH" target="_blank" style="background-color: #ffffff;">
       
           <img src="https://dark.bio/static/assets/icons/discord.png">
-          <p style="color: #000000">Killa Server</p>
+          <p style="color: #000000">Killa.lol Discord Server</p>
     <script src="https://erdem.js.org/script.js"></script>
   </html>
