--- a/testing.html
+++ b/testing.html
@@ -303,7 +303,7 @@
       
 <a class="link" href="https://discord.gg/ssKraVFH" target="_blank" style="background-color: #ffffff;">
       
-          <img src="https://dark.bio/static/assets/icons/discord.png">
+          <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069267754252763136/image.png">
           <p style="color: #000000">Killa.lol Discord Server</p>
     <script src="https://erdem.js.org/script.js"></script>
   </html>
