--- a/testing.html
+++ b/testing.html
@@ -301,7 +301,7 @@
   </div>
 <div class="links">
       
-<a class="link" href="https://discord.gg/ssKraVFH" target="_blank" style="background-color: #ffffff;">
+<a class="link" href="https://discord.gg/ssKraVFH" target="_blank" style="background-color: #242424;">
       
           <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069267754252763136/image.png">
           <p style="color: #000000">Killa.lol Discord Server</p>
