--- a/testing.html
+++ b/testing.html
@@ -11,7 +11,7 @@
       <meta property="og:image" content="https://erdem.js.org/favicon.png" />
       <meta property="og:url" content="https://killa.lol" />
       <link href="https://dark.bio/static/css/page.css" rel="stylesheet" type="text/css" />
-      <meta property="og:title" content="erdem" />
+      <meta property="og:title" content="Convicted" />
       <meta property="og:site_name" content="killa.lol" />
       <meta property="og:type" content="website" />
       <link rel="canonical" href="https://Killa.lol/$" />
@@ -278,13 +278,18 @@
       <div id="container">
          <!-- <img id="avatar" style="border-radius: 50%;" src=""/> -->
          <h1 class="title">Convicted</h1>
-          <p class="about">Owner & Developer of @ Killa.lol</p>       
+          <p class="about">Owner & Developer of @ Killa.lol</p>   
+      </div>    
        <div class="badge">
             <img src="https://cdn.discordapp.com/emojis/1067960946292707368.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Owner">
             <span class="badge-tooltiptext">Owner</span>
+        </div>
+        
         <div class="badge">
             <img src="https://cdn.discordapp.com/emojis/1067960948452765777.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Staff">
             <span class="badge-tooltiptext">Staff</span>
+        </div>
+
          <div class="badge">
         <img src="https://cdn.discordapp.com/emojis/1067960946892472342.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="memberid">
       <span class="badge-tooltiptext">ID: 2</span>
