--- a/testing.html
+++ b/testing.html
@@ -278,6 +278,7 @@
       <div id="container">
          <!-- <img id="avatar" style="border-radius: 50%;" src=""/> -->
          <h1 class="title">Convicted</h1>
+         <img id="avatar" style="border-radius: 50%;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png"/>
           <p class="about">Owner & Developer of @ Killa.lol</p>   
       </div>    
        <div class="badge">
@@ -304,11 +305,12 @@
         </div>                  
       </div>
   </div>
+</div>
 <div class="links">
       
 <a class="link" href="https://discord.gg/ssKraVFH" target="_blank" style="background-color: #ffffff;">
       
           <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069267754252763136/image.png">
-          <p style="color: #000000">Killa.lol Discord Server</p>
+          <p style="color: #000000"></p>
     <script src="https://erdem.js.org/script.js"></script>
   </html>
