--- a/testing.html
+++ b/testing.html
@@ -4,11 +4,11 @@
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Convicted</title>
-      <link rel="icon" type="ico/x-icon" href="favicon.ico">
+      <link rel="icon" type="ico/x-icon" href="https://cdn.discordapp.com/attachments/1069592850569887815/1069603113515876422/g0UVkOwCsBnXhTOchGhta5ii4mUiv8D9mTavoXNFVLAAAAAElFTkSuQmCC.png">
       <meta name="theme-color" content="#010409" />
       <meta name="description" content="Developer & Owner of @Killa.lol">
       <meta property="og:description" content="Developer & Owner of @Killa.lol" />
-      <meta property="og:image" content="https://erdem.js.org/favicon.png" />
+      <meta property="og:image" content="https://cdn.discordapp.com/attachments/1069592850569887815/1069603113515876422/g0UVkOwCsBnXhTOchGhta5ii4mUiv8D9mTavoXNFVLAAAAAElFTkSuQmCC.png" />
       <meta property="og:url" content="https://killa.lol" />
       <link href="https://dark.bio/static/css/page.css" rel="stylesheet" type="text/css" />
       <meta property="og:title" content="Convicted" />
