--- a/testing.html
+++ b/testing.html
@@ -278,7 +278,7 @@
       <div id="container">
          <!-- <img id="avatar" style="border-radius: 50%;" src=""/> -->
          <h1 class="title">Convicted</h1>
-         <img id="avatar" style="border-radius: 30%;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png"/>
+         <img id="avatar" style="border-radius: 30%;" src="https://media.discordapp.net/attachments/1068881808445427772/1068896095402467388/a_cb0bbb733d6907968bb3c61e08364177.gif"/>
          <div class="badge">
             <img src="https://cdn.discordapp.com/emojis/1067960946292707368.webp?size=96&quality=lossless" style="width: 20px; height: 20px;" alt="Owner">
             <span class="badge-tooltiptext">Owner</span>
