--- a/testing.html
+++ b/testing.html
@@ -18,9 +18,9 @@ Made with love and appreciation.">
 <link href="https://cdn.discordapp.com/attachments/1069592850569887815/1069750760830672997/g0UVkOwCsBnXhTOchGhta5ii4mUiv8D9mTavoXNFVLAAAAAElFTkSuQmCC.png" rel="shortcut icon" type="image/x-icon">
 <link href="https://cdn.discordapp.com/attachments/1069592850569887815/1069750760830672997/g0UVkOwCsBnXhTOchGhta5ii4mUiv8D9mTavoXNFVLAAAAAElFTkSuQmCC.png" rel="apple-touch-icon">
 <link href="https://killa.lol/$" rel="canonical">
-<link href="/css/vendor.css?id=74ce1f16fcc59f942e27e3dd269a4873" rel="stylesheet" type="text/css">
-<link href="/css/app.css?id=44b289c043c659d0cc952eb078a27606" rel="stylesheet" type="text/css">
-<link href="/css/page.css?id=c88b8dfb9f8406e9d726b251d9e9e625" rel="stylesheet" type="text/css">
+<link href="https://solo.to//css/vendor.css?id=74ce1f16fcc59f942e27e3dd269a4873" rel="stylesheet" type="text/css">
+<link href="https://solo.to//css/app.css?id=44b289c043c659d0cc952eb078a27606" rel="stylesheet" type="text/css">
+<link href="https://solo.to//css/page.css?id=c88b8dfb9f8406e9d726b251d9e9e625" rel="stylesheet" type="text/css">
 <script src="https://a.solo.to/script.js" data-site="IHGLANPG" defer></script>
 <style>.profile-bkg-hero-wrapper{background-image:url('https://media.discordapp.net/attachments/1059446368713834546/1059446423592116274/adadadadad.gif')}@media screen and (max-width: 479px){.profile-bkg-hero-wrapper{background-image:url('https://media.discordapp.net/attachments/1059446368713834546/1059446423592116274/adadadadad.gif')}}</style>
 </head>
@@ -38,8 +38,6 @@ Made with love and appreciation.">
 <h1 class="profile-name">Convicted</h1>
 <div class="verified-icon"><img src="https://cdn.solo.to/images/og.svg" alt="Rare Username" title="Rare Username" class="verified-icon-image verified-icon-image-dark"></div>
 </div>
-<div class="profile-location-box">
-<img src="https://cdn.solo.to/images/map-pin.svg" alt="Location" class="location-icon">
 <p class="text-sm">
 </em>killa.lol/$</em>
 </div>
