--- a/testing.html
+++ b/testing.html
@@ -53,18 +53,12 @@ Welcome to my killa.lol page link!</p>
 <a href="https://killa.lol" id="web" class="minimal-button minimal-button-dark w-inline-block soc-website"><img src="https://cdn.solo.to/images/social/website-min.svg" alt="Website" class="minimal-button-icon minimal-button-icon-dark"></a>
 <a href="https://discord.gg/ssKraVFH" id="dsc" class="minimal-button minimal-button-dark w-inline-block soc-discord"><img src="https://cdn.solo.to/images/social/discord-min.svg" alt="Discord" class="minimal-button-icon minimal-button-icon-dark"></a>
 <a href="https://github.com/cxnvicted" id="git" class="minimal-button minimal-button-dark w-inline-block soc-github"><img src="https://cdn.solo.to/images/social/github-min.svg" alt="GitHub" class="minimal-button-icon minimal-button-icon-dark"></a>
-
-<div class="link-block-text-wrapper">
-<div class="link-name">@ killa.lol</div>
-<div class="link-url">Owner</div>
-</div>
-<div class="link-arrow-wrapper"><img src="https://cdn.solo.to/images/link-button-arrow.svg" class="link-arrows"></div>
 </a>
 </div></div></div>
 </div>
 <div class="page-footer"><a href="https://killa.lol" class="linkpage-cta linkpage-cta-dark w-inline-block"><img src="" width="170" class="footer-brand-image">© 2023 / @killa.lol</a></div>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-<script src="/js/page.js?id=0050ccc29ccae2c736687c4e943050a7"></script>
+<script src="https://solo.to/js/page.js?id=0050ccc29ccae2c736687c4e943050a7"></script>
 </body>
 </html>
 <!--・。.・⁺· design © 2023 solo.to ·⁺・。.・-->
