--- a/testing.html
+++ b/testing.html
@@ -36,7 +36,7 @@ Made with love and appreciation.">
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
 <h1 class="profile-name">Convicted</h1>
-<div class="verified-icon"><img src="https://cdn.solo.to/images/og.svg" alt="Rare Username" title="Rare Username" class="verified-icon-image verified-icon-image-dark"></div>
+<div class="verified-icon"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" alt="Verified" title="Rare Username" class="verified-icon-image verified-icon-image-dark"></div>
 </div>
 <p class="text-sm">
 </em>killa.lol/$</em>
