--- a/testing.html
+++ b/testing.html
@@ -37,7 +37,7 @@ Made with love and appreciation.">
 <div class="profile-name-wrapper">
 <h1 class="profile-name">Convicted</h1>
 <div class="verified-icon"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" alt="Verified" title="Verified" class="verified-icon-image verified-icon-image-dark"></div>
-<div class="Early-icon"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" alt="Verified" title="Early" class="verified-icon-image verified-icon-image-dark"></div>
+<div class="Early"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" class="verified-icon-image verified-icon-image-dark"></div>
 </div>
 <p class="text-sm">
 </em>killa.lol/$</em>
