--- a/testing.html
+++ b/testing.html
@@ -21,6 +21,257 @@ Made with love and appreciation.">
 <link href="https://solo.to//css/vendor.css?id=74ce1f16fcc59f942e27e3dd269a4873" rel="stylesheet" type="text/css">
 <link href="https://solo.to//css/app.css?id=44b289c043c659d0cc952eb078a27606" rel="stylesheet" type="text/css">
 <link href="https://solo.to//css/page.css?id=c88b8dfb9f8406e9d726b251d9e9e625" rel="stylesheet" type="text/css">
+</script>
+<style>
+	.max-w-\[1100px\] {
+	
+		width:500px
+	}
+		</style>
+<main style="">
+<div class="fixed w-full h-full" style="background-image:linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)),url('https://cdn.discordapp.com/attachments/1004849202507038804/1061448840676384900/IMG_4146.gif'); background-position: center;background-repeat: no-repeat;background-size: cover;background-attachment: fixed; background-position: center;"></div>
+<style>
+
+
+.click_anywhere {
+
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);	
+	
+}
+
+    .wrapper .button {
+        display: inline-block;
+        height: 60px;
+        width: 60px;
+        float: left;
+        margin: 0 5px;
+        overflow: hidden;
+        background: rgb(50, 50, 50);
+        border-radius: 51px;
+        cursor: pointer;
+        box-shadow: 0px 10px 10px rgb(0, 0, 0);
+        transition: all 0.3s ease-out;
+        color: black;
+    }
+
+    .wrapper .button:hover {
+        width: 200px;
+        color: black;
+    }
+
+    .wrapper .button .icon {
+        display: inline-block;
+        height: 60px;
+        width: 60px;
+        text-align: center;
+        border-radius: 500px;
+        box-sizing: border-box;
+        line-height: 60px;
+        transition: all 0.3s ease-out;
+    }
+
+    .wrapper .button .icon i {
+        font-size: 25px;
+        line-height: 60px;
+        transition: all 0.3s ease-out;
+    }
+
+    .wrapper .button:hover .icon i {
+        color: #fff;
+    }
+
+    .wrapper .button span {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 60px;
+        margin-left: 10px;
+        transition: all 0.3s ease-out;
+        color: rgb(255, 255, 255);
+    }
+
+    .footer p, h4, a {
+        text-align: center;
+        color: white;
+    }
+
+
+    /*
+    --------------------------------------------
+    */
+
+    .wrapper .button.discord:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.discord span {
+        color: #303030;
+    }
+
+    .wrapper .button.github:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.github span {
+        color: #303030;
+    }
+
+    .wrapper .button.tiktok:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.tiktok span {
+        color: #303030;
+    }
+
+    .wrapper .button.youtube:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.youtube span {
+        color: #303030;
+    }
+
+    .wrapper .button.twitch:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.twitch span {
+        color: #303030;
+    }
+
+    .wrapper .button.twitter:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.twitter span {
+        color: #303030;
+    }
+
+    .wrapper .button.snapchat:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.snapchat span {
+        color: #303030;
+    }
+
+    .wrapper .button.steam:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.steam span {
+        color: #303030;
+    }
+
+    .wrapper .button.instagram:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.instagram span {
+        color: #303030;
+    }
+
+    .wrapper .button.facebook:hover .icon {
+        background: #4267B2;
+    }
+
+    .wrapper .button.facebook span {
+        color: #4353ff
+    }
+
+    .wrapper .button.spotify:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.spotify span {
+        color: #303030;
+    }
+
+    .wrapper .button.reddit:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.reddit span {
+        color: #303030;
+    }
+
+    .wrapper .button.soundcloud:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.soundcloud span {
+        color: #303030;
+    }
+
+    .wrapper .button.pinterest:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.pinterest span {
+        color: #303030;
+    }
+
+    .wrapper .button:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button span {
+        color: #303030;
+    }
+
+    .badge {
+        position: relative;
+        display: inline-block;
+        height: 28px;
+        width: 28px;
+    }
+
+    .badge .badge-tooltiptext {
+        visibility: hidden;
+        width: 120px;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        position: absolute;
+        z-index: 1;
+        bottom: 125%;
+        left: 50%;
+        margin-left: -60px;
+        opacity: 0;
+        transition: opacity 0.3s;
+    }
+
+    .badge .badge-tooltiptext::after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #555 transparent transparent transparent;
+    }
+
+    .badge:hover .badge-tooltiptext {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .editBtn {
+        background-color: #282828;
+        background-size: cover;
+        border-radius: 7px;
+        padding: 8px;
+        color: white;
+        cursor: pointer;
+    }
+</style>
 <script src="https://a.solo.to/script.js" data-site="IHGLANPG" defer></script>
 <style>.profile-bkg-hero-wrapper{background-image:url('https://media.discordapp.net/attachments/1059446368713834546/1059446423592116274/adadadadad.gif')}@media screen and (max-width: 479px){.profile-bkg-hero-wrapper{background-image:url('https://media.discordapp.net/attachments/1059446368713834546/1059446423592116274/adadadadad.gif')}}</style>
 </head>
