--- a/testing.html
+++ b/testing.html
@@ -23,25 +23,6 @@ Made with love and appreciation.">
 <link href="https://solo.to//css/page.css?id=c88b8dfb9f8406e9d726b251d9e9e625" rel="stylesheet" type="text/css">
 </script>
 <style>
-	.max-w-\[1100px\] {
-	
-		width:500px
-	}
-		</style>
-<main style="">
-<div class="fixed w-full h-full" style="background-image:linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)),url('https://cdn.discordapp.com/attachments/1004849202507038804/1061448840676384900/IMG_4146.gif'); background-position: center;background-repeat: no-repeat;background-size: cover;background-attachment: fixed; background-position: center;"></div>
-<style>
-
-
-.click_anywhere {
-
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);	
-	
-}
 
     .wrapper .button {
         display: inline-block;
@@ -287,8 +268,11 @@ Made with love and appreciation.">
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
 <h1 class="profile-name">Convicted</h1>
+<div class="badge"></div>
 <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Verified">
 <span class="badge-tooltiptext">Verified</span>
+</div>
+<div class="badge"></div>
 <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Early">
 <span class="badge-tooltiptext">Early</span>
 </div>
