--- a/testing.html
+++ b/testing.html
@@ -268,14 +268,14 @@ Made with love and appreciation.">
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
 <h1 class="profile-name">Convicted</h1>
-<div class="badge"></div>
-<img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Verified">
-<span class="badge-tooltiptext">Verified</span>
-</div>
-<div class="badge"></div>
-<img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Early">
-<span class="badge-tooltiptext">Early</span>
-</div>
+  <div class="badge">
+    <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Developer">
+    <span class="badge-tooltiptext">Early</span>
+  </div>
+  <div class="badge">
+    <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Developer">
+    <span class="badge-tooltiptext">Verified</span>
+  </div>
 <p class="text-sm">
 </em>killa.lol/$</em>
 </div>
