--- a/testing.html
+++ b/testing.html
@@ -263,11 +263,11 @@ Made with love and appreciation.">
 </div>
 <div class="section info-card"><div class="section-container"><div class="profile-info-wrapper profile-info-wrapper-void">
 <div class="profile-info-top-wrapper"><div class="profile-image-wrapper">
-<picture><source media="(max-width:479px)" srcset="https://cdn.discordapp.com/attachments/1069592850569887815/1069750995959161033/a_cb0bbb733d6907968bb3c61e08364177.png"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069750760830672997/g0UVkOwCsBnXhTOchGhta5ii4mUiv8D9mTavoXNFVLAAAAAElFTkSuQmCC.png" decoding="async" class="profile-image"></picture>
+<picture><source media="(max-width:479px)" srcset="https://media.discordapp.net/attachments/1004849202507038804/1063608088516644906/212A3F17-875F-4D3B-98D4-F022E79A0CF1.gif"><img src="https://media.discordapp.net/attachments/1004849202507038804/1063608088516644906/212A3F17-875F-4D3B-98D4-F022E79A0CF1.gif" decoding="async" class="profile-image"></picture>
 </div></div>
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
-<h1 class="profile-name">Convicted</h1>
+<h1 class="profile-name">Convicted </h1>
   <div class="badge">
     <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Developer">
     <span class="badge-tooltiptext">Early</span>
