--- a/testing.html
+++ b/testing.html
@@ -15,6 +15,10 @@ Made with love and appreciation.">
 <meta name="twitter:card" content="summary">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#2b2b2b">
+<link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+<style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
+<link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
+<style>@import url('https://fonts.cdnfonts.com/css/pf-tempesta-five');</style>
 <link href="https://cdn.discordapp.com/attachments/1069592850569887815/1069750760830672997/g0UVkOwCsBnXhTOchGhta5ii4mUiv8D9mTavoXNFVLAAAAAElFTkSuQmCC.png" rel="shortcut icon" type="image/x-icon">
 <link href="https://cdn.discordapp.com/attachments/1069592850569887815/1069750760830672997/g0UVkOwCsBnXhTOchGhta5ii4mUiv8D9mTavoXNFVLAAAAAElFTkSuQmCC.png" rel="apple-touch-icon">
 <link href="https://killa.lol/$" rel="canonical">
@@ -257,7 +261,7 @@ Made with love and appreciation.">
 <style>.profile-bkg-hero-wrapper{background-image:url('https://media.discordapp.net/attachments/1059446368713834546/1059446423592116274/adadadadad.gif')}@media screen and (max-width: 479px){.profile-bkg-hero-wrapper{background-image:url('https://media.discordapp.net/attachments/1059446368713834546/1059446423592116274/adadadadad.gif')}}</style>
 </head>
 <body class="body-void">
-<div class="page-wrapper page-wrapper-linkpage" style="font-family:'Chillax',sans-serif">
+<div class="page-wrapper page-wrapper-linkpage" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/1053371125721210971/1066784360394670160/67A3310B-9D1F-4476-BB5C-939FAFC3DBA6.jpg');">
 <div class="profile-bkg-hero-wrapper">
 <div class="slice-div slice-div-large slice-div-large-void"></div>
 </div>
@@ -267,7 +271,7 @@ Made with love and appreciation.">
 </div></div>
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
-<h1 class="profile-name">Convicted </h1>
+<h1 class="profile-name">Convicted</h1>
   <div class="badge">
     <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Developer">
     <span class="badge-tooltiptext">Early</span>
