--- a/testing.html
+++ b/testing.html
@@ -272,12 +272,13 @@ Made with love and appreciation.">
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
 <h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">CONVICTED</h1>
+</div>
   <div class="badge">
-    <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" style="width: 50px; height: 50px;" alt="Early">
+    <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Early">
     <span class="badge-tooltiptext">Early</span>
   </div>
   <div class="badge">
-    <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" style="width: 50px; height: 50px;" alt="Verified">
+    <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Verified">
     <span class="badge-tooltiptext">Verified</span>
   </div>
 </div>
