--- a/testing.html
+++ b/testing.html
@@ -281,8 +281,7 @@ Made with love and appreciation.">
     <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" style="width: 20px; height: 20px;" alt="Early">
     <span class="badge-tooltiptext">Early</span>
  </div>
-    <div class="badge">
-</div>
+<div>
 <div class="contact-button-wrapper contact-button-wrapper-detail">
 <div id="discord" data-username="Convicted#0024" class="contact-button contact-button-dark contact-button-round w-inline-block"><img src="https://cdn.solo.to/images/contact/discord-min.svg" class="contact-button-image contact-button-image-dark"><div class="contact-button-text">Convicted#0024</div><div class="contact-button-copy-overlay noselect">✔</div></div>
 </div>
