--- a/testing.html
+++ b/testing.html
@@ -272,8 +272,11 @@ Made with love and appreciation.">
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">CONVICTED</h1>
-<div class="verified-icon"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" alt="Verified" title="Verified" class="verified-icon-image verified-icon-image-dark"></div>
-<div class="Creator-icon"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" alt="Early" title="Early" class="Creator-icon-image Creator-icon-image-dark"></div>
+<span class="cursor-pointer text-xl" title="Verified">
+<div class="verified-icon"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" class="verified-icon-image verified-icon-image-dark" style="position: relative; height: 15px; left: 15%;"></div>
+</span>
+<span class="cursor-pointer text-xl" title="Early">
+<div class="Early"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" class="verified-icon-image verified-icon-image-dark" style="position: absoulute; height: 16px; left: 60%; margin-left:-2px;"></div>
 </div>
 <div class="contact-button-wrapper contact-button-wrapper-detail">
 <div id="discord" data-username="Convicted#0024" class="contact-button contact-button-dark contact-button-round w-inline-block"><img src="https://cdn.solo.to/images/contact/discord-min.svg" class="contact-button-image contact-button-image-dark"><div class="contact-button-text">Convicted#0024</div><div class="contact-button-copy-overlay noselect">✔</div></div>
