--- a/testing.html
+++ b/testing.html
@@ -275,6 +275,7 @@ Made with love and appreciation.">
 <span class="cursor-pointer text-xl" title="Verified">
 <div class="verified-icon"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754666310701137/8fN6RL9xPR6iQAAAAASUVORK5CYII.png" class="verified-icon-image verified-icon-image-dark" style="position: relative; height: 15px; left: 15%;"></div>
 </span>
+</div>
 <span class="cursor-pointer text-xl" title="Early">
 <div class="Early"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" class="verified-icon-image verified-icon-image-dark" style="position: absoulute; height: 16px; left: 60%; margin-left:-2px;"></div>
 </div>
