--- a/testing.html
+++ b/testing.html
@@ -278,6 +278,7 @@ Made with love and appreciation.">
 </div>
 <span class="cursor-pointer text-xl" title="Early">
 <div class="Early"><img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069754162469949480/o8MT5ufJYYwAAAAASUVORK5CYII.png" class="verified-icon-image verified-icon-image-dark" style="position: absoulute; height: 16px; left: 60%; margin-left:-2px;"></div>
+</span>
 </div>
 <div class="contact-button-wrapper contact-button-wrapper-detail">
 <div id="discord" data-username="Convicted#0024" class="contact-button contact-button-dark contact-button-round w-inline-block"><img src="https://cdn.solo.to/images/contact/discord-min.svg" class="contact-button-image contact-button-image-dark"><div class="contact-button-text">Convicted#0024</div><div class="contact-button-copy-overlay noselect">✔</div></div>
