--- a/testing.html
+++ b/testing.html
@@ -271,6 +271,9 @@ Made with love and appreciation.">
 </div></div>
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
+<p class="text-sm">
+killa.lol/<em>$</em>
+</p>
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">CONVICTED</h1>
 <div>
     <div class="badge">
