--- a/testing.html
+++ b/testing.html
@@ -258,7 +258,7 @@ Made with love and appreciation.">
     }
 </style>
 <script src="https://a.solo.to/script.js" data-site="IHGLANPG" defer></script>
-<style>.profile-bkg-hero-wrapper{background-image:url('https://media.discordapp.net/attachments/1059446368713834546/1059446423592116274/adadadadad.gif')}@media screen and (max-width: 479px){.profile-bkg-hero-wrapper{background-image:url('https://media.discordapp.net/attachments/1059446368713834546/1059446423592116274/adadadadad.gif')}}</style>
+<style>.profile-bkg-hero-wrapper{background-image:url('https://cdn.discordapp.com/attachments/1066410151327846410/1069782683611320410/image.png')}@media screen and (max-width: 479px){.profile-bkg-hero-wrapper{background-image:url('https://cdn.discordapp.com/attachments/1066410151327846410/1069782683611320410/image.png')}}</style>
 </head>
 <body class="body-void">
 <div class="page-wrapper page-wrapper-linkpage" style="font-family:'Chillax',sans-serif">
