--- a/testing.html
+++ b/testing.html
@@ -271,8 +271,6 @@ Made with love and appreciation.">
 </div></div>
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
-<p class="text-sm">
-killa.lol/<em>$</em>
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">CONVICTED</h1>
 <div>
     <div class="badge">
@@ -296,6 +294,8 @@ killa.lol/<em>$</em>
 </div></div></div>
 </div>
 <div class="page-footer"><a href="https://killa.lol" class="linkpage-cta linkpage-cta-dark w-inline-block"><img src="" width="170" class="footer-brand-image">© 2023 / @killa.lol</a></div>
+<center><p class="text-sm"></center>
+</center>killa.lol/<em>$</em></center>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 <script src="https://solo.to/js/page.js?id=0050ccc29ccae2c736687c4e943050a7"></script>
 
