--- a/testing.html
+++ b/testing.html
@@ -293,9 +293,8 @@ Made with love and appreciation.">
 </a>
 </div></div></div>
 </div>
-<div class="page-footer"><a href="https://killa.lol" class="linkpage-cta linkpage-cta-dark w-inline-block"><img src="" width="170" class="footer-brand-image">© 2023 / @killa.lol</a></div>
-<center><p class="text-sm"></center>
-</center>killa.lol/<em>$</em></center>
+<div class="page-footer"><a href="https://killa.lol/$" class="linkpage-cta linkpage-cta-dark w-inline-block"><img src="" width="150" class="footer-brand-image">killa.lol/$</a></div>
+<div class="page-footer"><a href="https://killa.lol" class="linkpage-cta linkpage-cta-dark w-inline-block"><img src="" width="170" class="footer-brand-image">© 2023 Referall Rights.</a></div>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 <script src="https://solo.to/js/page.js?id=0050ccc29ccae2c736687c4e943050a7"></script>
 
